added href to nav buttons and stylized

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <header>
         <h1>> Brady Dorsey : Software Engineer</h1>
         <div>
+            <nav class="Home">
+                <h2><a href="index.html">Home</a></h2>
+            </nav>
             <nav class="about">
-                <h2>About</h2>
+                <h2><a href="https://github.com/fusion407">About</a></h2>
             </nav>
             <nav class="portfolio">
-                <h2>Portfolio</h2>
+                <h2><a href="https://github.com/fusion407">Portfolio</a></h2>
             </nav>
             <nav class="github">
-                <h2>Github</h2>
+                <h2><a href="https://github.com/fusion407">Github</a></h2>
             </nav>
         </div>
         
@@ -27,4 +30,5 @@
     
     <script src="script.js"></script>
   </body>
+  
 </html>
