--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@800&display=swap" rel="stylesheet">
     <title>My Personal Website</title>
   </head>
   <body>
     <header>
-        <h1>> Brady Dorsey : Software Engineer</h1>
+        <h1>> Brady Dorsey - Software Engineer</h1>
         <div>
             <nav class="Home">
                 <h2><a href="index.html">Home</a></h2>
             </nav>
             <nav class="about">
-                <h2><a href="https://github.com/fusion407">About</a></h2>
+                <h2><a href="about.html">About</a></h2>
             </nav>
             <nav class="portfolio">
-                <h2><a href="https://github.com/fusion407">Portfolio</a></h2>
+                <h2><a href="portfolio.html">Portfolio</a></h2>
             </nav>
             <nav class="github">
                 <h2><a href="https://github.com/fusion407">Github</a></h2>
